--- a/src/main/resources/application-heroku.yml
+++ b/src/main/resources/application-heroku.yml
@@ -2,19 +2,19 @@
 
 spring:
   jpa:
+    show-sql: true
     properties:
-      hibernate.dialect: org.hibernate.dialect.MySQL5Dialect
-    hibernate:
-      ddl-auto: update
+      hibernate.dialect: org.hibernate.dialect.PostgreSQL82Dialect
   datasource:
-    url: jdbc:mysql://localhost:3306/moviecatalog
-    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:postgresql://localhost:5432/moviecatalog
+    driver-class-name:
     username: movieapi_user
     password: movieapi_pass
-    platform: mysql
+    platform: postgres
   liquibase:
     user: lbmovieapi_user
     password: lbmovieapi_pass
+    url: ${spring.datasource.url}
 
 management:
   endpoints:
