adding info for packaging

--- a/pom.xml
+++ b/pom.xml
@@ -120,6 +120,14 @@
 		</dependencies>
 	</dependencyManagement>
 
+	<distributionManagement>
+		<repository>
+			<id>github</id>
+			<name>GitHub movies-app Apache Maven Packages</name>
+			<url>https://maven.pkg.github.com/movies-app/movies-api</url>
+		</repository>
+	</distributionManagement>
+
 	<build>
 		<plugins>
 			<plugin>
