--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,11 +13,28 @@ spring:
       hibernate.format_sql: true
     hibernate:
       ddl-auto: validate
+  datasource:
+    url: jdbc:h2:mem:moviecatalog;MODE=MySQL;DB_CLOSE_DELAY=-1
+    driver-class-name: org.h2.Driver
+    username: sa
+    password: sa
+    platform: h2
+  #    initialization-mode: embedded
   liquibase:
-    change-log: classpath:/db/changelog/db.changelog-master.yml
+    change-log: classpath:/db/changelog/db.changelog-test.yml
+    user: sa
+    password: sa
+    url: ${spring.datasource.url}
+    enabled: true
+#  liquibase:
+#    change-log: classpath:/db/changelog/db.changelog-master.yml
 #    url: jdbc:h2:mem:moviecatalog;MODE=MySQL;DB_CLOSE_DELAY=-1
 #    url: ${spring.datasource.url}
-    enabled: true
+#    enabled: true
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
 
 management:
   info:
