--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -34,5 +34,11 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ github.token }}
 
-    - name: Build Docker image
-      run: mvn spring-boot:build-image -Dmaven.test.skip=true
+    - name: Login to DockerHub
+      uses: docker/login-action@v1
+      with:
+        username: ${{ secrets.DOCKER_HUB_USER }}
+        password: ${{ secrets.DOCKER_HUB_PASSWORD }}
+
+#    - name: Build Docker image
+#      run: mvn spring-boot:build-image -Dmaven.test.skip=true
