changes in docker build steps

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -43,5 +43,8 @@ jobs:
     - name: Build Docker image
       run: mvn spring-boot:build-image -Dmaven.test.skip=true
 
-    - name: List docker images
-      run: docker images
+    - name: Tag image
+      run: docker tag movies-api:0.0.1-SNAPSHOT ${{ secrets.DOCKER_REPO }}/movies-api:0.0.1-SNAPSHOT
+
+    - name: Publish Docker image
+      run: docker push ${{ secrets.DOCKER_HUB_REPO }}/movies-api:0.0.1-SNAPSHOT
