--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -15,36 +15,42 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v2
     - name: Set up JDK 11
       uses: actions/setup-java@v1
       with:
         java-version: 11
-        server-id: github
-        settings-path: ${{ github.workspace }}
     - name: Build with Maven
       run: mvn -B package --file pom.xml
 
-    - name: Publish to GitHub Packages Apache Maven
+  artifact:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up JDK 11
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11
+          server-id: github
+          settings-path: ${{ github.workspace }}
+    - name: Publish to GitHub Packages
       run: mvn deploy -s $GITHUB_WORKSPACE/settings.xml -Dmaven.test.skip=true
       env:
         GITHUB_TOKEN: ${{ github.token }}
 
-    - name: Login to DockerHub
-      uses: docker/login-action@v1
-      with:
-        username: ${{ secrets.DOCKER_HUB_USER }}
-        password: ${{ secrets.DOCKER_HUB_PASSWORD }}
-
-    - name: Build Docker image
-      run: mvn spring-boot:build-image -Dspring-boot.build-image.imageName=${{ secrets.DOCKER_HUB_REPO }}:0.0.1-SNAPSHOT -Dmaven.test.skip=true
+#    - name: Login to DockerHub
+#      uses: docker/login-action@v1
+#      with:
+#        username: ${{ secrets.DOCKER_HUB_USER }}
+#        password: ${{ secrets.DOCKER_HUB_PASSWORD }}
+#
+#    - name: Build Docker image
+#      run: mvn spring-boot:build-image -Dspring-boot.build-image.imageName=${{ secrets.DOCKER_HUB_REPO }}:0.0.1-SNAPSHOT -Dmaven.test.skip=true
 
 #    - name: Tag image
 #      run: docker tag ${{ secrets.DOCKER_HUB_REPO }}:0.0.1-SNAPSHOT ${{ secrets.DOCKER_HUB_REPO }}:0.0.1-SNAPSHOT
 
-    - name: Publish Docker image
-      run: docker push ${{ secrets.DOCKER_HUB_REPO }}:0.0.1-SNAPSHOT
+#    - name: Publish Docker image
+#      run: docker push ${{ secrets.DOCKER_HUB_REPO }}:0.0.1-SNAPSHOT
