--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,7 +27,7 @@ jobs:
 
   artifact:
     runs-on: ubuntu-latest
-    needs: [test]
+    needs: [build]
     steps:
     - uses: actions/checkout@v2
     - name: Set up JDK 11
