--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -25,9 +25,24 @@ jobs:
     - name: Build with Maven
       run: mvn -B package --file pom.xml
 
-  artifact:
+  code-analysis:
     runs-on: ubuntu-latest
     needs: [build]
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up JDK 11
+      uses: actions/setup-java@v1
+      with:
+        java-version: 11
+    - name: Build with Maven
+      run: mvn org.sonarsource.scanner.maven:sonar-maven-plugin:sonar
+      env:
+        SONAR_TOKEN: ${{ secrets.SONAR_SECRET }}
+        MAVEN_OPTS: "-Xmx512m"
+
+  artifact:
+    runs-on: ubuntu-latest
+    needs: [build, code-analysis]
     steps:
     - uses: actions/checkout@v2
     - name: Set up JDK 11
