--- a/pom.xml
+++ b/pom.xml
@@ -13,10 +13,19 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>Movies-API</name>
 	<description>Simple REST API for movie data management</description>
+	<scm>
+		<connection>scm:git:ssh://github.com/movies-app/movies-api</connection>
+		<url>https://github.com/movies-app/movies-api</url>
+	</scm>
 
 	<properties>
 		<java.version>11</java.version>
 		<testcontainers.version>1.15.0</testcontainers.version>
+
+
+		<sonar.projectKey>movies-app_movies-api</sonar.projectKey>
+		<sonar.organization>movies-app</sonar.organization>
+		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 	</properties>
 
 	<dependencies>
