--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -37,6 +37,7 @@ jobs:
     - name: Build with Maven
       run: mvn org.sonarsource.scanner.maven:sonar-maven-plugin:sonar
       env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         SONAR_TOKEN: ${{ secrets.SONAR_SECRET }}
         MAVEN_OPTS: "-Xmx512m"
 
