--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -77,6 +77,16 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ github.token }}
 
+  docker:
+    runs-on: ubuntu-latest
+    needs: [build, code-analysis, artifact]
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up JDK 11
+      uses: actions/setup-java@v1
+      with:
+        java-version: 11
+
     - name: Login to DockerHub
       uses: docker/login-action@v1
       with:
@@ -85,9 +95,9 @@ jobs:
 
     - name: Build And Push Docker image
       run: |
-        ./docker-actions.sh build ${{ secrets.DOCKER_HUB_REPO }}
-        ./docker-actions.sh tag ${{ secrets.DOCKER_HUB_REPO }}
-        ./docker-actions.sh push ${{ secrets.DOCKER_HUB_REPO }}
+        bash docker-actions.sh build ${{ secrets.DOCKER_HUB_REPO }}
+        bash docker-actions.sh tag ${{ secrets.DOCKER_HUB_REPO }}
+        bash docker-actions.sh push ${{ secrets.DOCKER_HUB_REPO }}
 
 
 #
