--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -87,6 +87,13 @@ jobs:
       with:
         java-version: 11
 
+    - name: Cache Maven packages
+      uses: actions/cache@v2
+      with:
+        path: ~/.m2
+        key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+        restore-keys: ${{ runner.os }}-m2
+
     - name: Login to DockerHub
       uses: docker/login-action@v1
       with:
