--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -103,7 +103,7 @@ jobs:
     - name: Build And Push Docker image
       shell: bash
       run: |
-        POM_VERSION=$(mvn help:evaluate -Dexpression=project.version | grep -v '\[')
+        POM_VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout | grep -v '\[')
         bash docker-actions.sh ${{ secrets.DOCKER_HUB_REPO }} $POM_VERSION
 
 
