--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -2,23 +2,34 @@
 
 spring:
   jpa:
-    properties:
-      hibernate.dialect: org.hibernate.dialect.MySQL5Dialect
+    show-sql: true
     hibernate:
-      ddl-auto: update
-#  datasource:
-#    url: jdbc:mysql://localhost:3306/moviecatalog
-#    driver-class-name: com.mysql.cj.jdbc.Driver
-#    username: movieapi_user
-#    password: movieapi_pass
-#    platform: mysql
-#  liquibase:
-#    user: lbmovieapi_user
-#    password: lbmovieapi_pass
+      ddl-auto: validate
+  datasource:
+    url: jdbc:h2:mem:moviecatalog;MODE=MySQL;DB_CLOSE_DELAY=-1
+    driver-class-name: org.h2.Driver
+    username: sa
+    password: sa
+    platform: h2
+  #    initialization-mode: embedded
+  liquibase:
+    change-log: classpath:/db/changelog/db.changelog-test.yml
+    user: sa
+    password: sa
+#    url: ${spring.datasource.url}
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
 
-management:
-  endpoints:
-    web:
-      exposure:
-        include: "*"
 
+#management:
+#  endpoints:
+#    web:
+#      exposure:
+#        include: "*"
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka/
